# RoundtableTrading

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  main.py  pyproject.toml
doc/: git-workflow.md
doc/idea/: beginning-idea.md  brainstorming.md  enhancements.md
doc/plan/: phase1-mvp-plan.md
doc/plans/: README.md  git-setup.md  phase1-mvp.md
doc/prd/: prd-addendum.md  prd.md
scripts/: collect_initial_data.py  init_db.sql
src/: config.py
src/data/: models.py
src/data/collectors/: pykrx_collector.py
src/data/storage/: db_manager.py
src/utils/: logger.py
tests/unit/: test_data_models.py
