[project]
name = "roundtable-trading"
version = "0.1.0"
description = "Multi-Agent Stock Trading System"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.25.0",
    "pykrx>=1.0.51",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "asyncpg>=0.31.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.2",
    "aiohttp>=3.13.3",
    "pandas-ta>=0.4.71b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
data = [
    "pykrx>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "aiohttp>=3.9.0",
    "pandas-ta>=0.3.0",
]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "tenacity>=8.2.0",
]
ui = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "pre-commit>=4.5.1",
]
